2002-10-17  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (button_release_event): make scrolling via the scroll
	wheel work again.

	* htmlclueflow.c (append_selection_string): indent and quote
	selected strings. (fixes #24529)

	* htmlengine.c (parse_table): save and restore pAlign and
	divAlign, and initialize them to NONE.

2002-10-16  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_c): make center tags use the same logic as
	div tags (that is what they are after all).
	(parse_d): use update_flow_align.
	(update_flow_align): helper function for center and div.

2002-10-17  Larry Ewing  <lewing@ximian.com>

	* htmliframe.c: add get/set margin width functions.

	* htmliframe.h: add prototypes for margin functions.

	* htmlengine.c (parse_iframe): call the new iframe functions.

2002-10-16  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c: (parse_body): save & restore e->pending_para and
	e->avoid_para
	(parse_c): close flow only if non empty, otherwise just set its
	halign
	(parse_f): don't set pending para on <form>, just close flow if
	non empty
	(parse_table): don't add pending paragraph on end of cells
	(form_begin): new extracted function
	(form_end): ditto
	(parse_i): if form is NULL create new default form around to at
	least render it (as mozilla does)


2002-10-16  Larry Ewing  <lewing@ximian.com>

 	* gtkhtml.c (selection_get): Get the actual length of the ucs2
 	string rather than basing is on the utf8 length, and start the
 	selection buffer with a byte order marker (mozilla started doing
 	this in 1.2.x)
 	(selection_received): use any byte order maker present to
 	determine the byte order of the selection and then discard it when
 	before converting the selection.  (Fixes the underscore problem in
 	#30573)
 	
	* htmlengine.c (check_prev): don't start a new text if both faces
	are NULL.

2002-10-11  Larry Ewing  <lewing@ximian.com>

	* htmldrawqueue.c (html_draw_queue_flush): check to make sure we
	still have a visual before trying to draw.